# sqlite_backup

./: .gitignore  LICENSE  Makefile  README.md  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yaml
docs/sqlite_backup/: core.md  index.md  log.md
sqlite_backup/: __init__.py  __main__.py  core.py  log.py
tests/: __init__.py  test_sqlite_backup.py  test_threads.py
