[metadata]
name = sqlite_backup
version = 0.1.7
description = A tool to copy sqlite databases you don't own
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
author = Sean Breckenridge
author_email = "seanbrecke@gmail.com"
url = https://github.com/seanbreckenridge/sqlite_backup
keywords = database sqlite
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
include_package_data = True
install_requires =
    click>=8.0
    logzero
python_requires = >=3.8

[options.packages.find]
include =
    sqlite_backup
exclude =
    tests*

[options.package_data]
sqlite_backup = py.typed

[options.entry_points]
console_scripts =
    sqlite_backup = sqlite_backup.__main__:main


[options.extras_require]
testing =
    pytest
    mypy
    flake8
    pytest-reraise


[mypy]
pretty = True
show_error_context = True
show_error_codes   = True
check_untyped_defs = True
namespace_packages = True
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True

[flake8]
ignore=E501

[tool:pytest]
addopts =
  -rap
  --doctest-modules sqlite_backup
  ./tests/
